build: refactor to be consistent with other projects